test/parserTest/fail/test15.ic
class BadBinop2 {
	void main () {
		boolean b = && true || false;
	}
}